feat: implement in-memory store with SET and GET support